--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -9,8 +9,12 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.6",
     "@theme-ui/presets": "^0.3.5",
+    "apollo-link-context": "^1.0.20",
+    "faunadb": "^4.0.0",
     "gatsby": "^2.29.2",
+    "gatsby-plugin-create-client-paths": "^2.7.0",
     "netlify-identity-widget": "^1.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
